@@ -1,0 +1,36 @@
+.. _flash_module:
+
+:mod:`pyramid.flash`
+--------------------
+
+Flash Category Constants
+~~~~~~~~~~~~~~~~~~~~~~~~
+
+The following attributes represent constants for use as flash messaging
+category values (see :ref:`flash_chapter`).
+
+.. attribute:: DEBUG
+
+   An alternate spelling for the string ``debug``.  Represents development
+   debug messages.
+
+.. attribute:: INFO
+
+   An alternate spelling for the string ``info``.  Represents messages that
+   are informational for user consumption.
+
+.. attribute:: SUCCESS
+
+   An alternate spelling for the string ``success``.  Represents messages that
+   tell the user about a successful action.
+
+.. attribute:: WARNING
+
+   An alternate spelling for the string ``warning``.  Represents messages
+   that tell the user about a condition that is not a success, but is neither
+   an error.
+
+.. attribute:: ERROR
+
+   An alternate spelling for the string ``success``.  Represents messages
+   that tell the user about an unsuccessful action.
