@@ -18,6 +18,7 @@ import base64
 from zope.interface import implements
 
 from pyramid.interfaces import ISession
+from pyramid import flash
 
 def manage_accessed(wrapped):
     """ Decorator which causes a cookie to be set when a wrapped
@@ -166,6 +167,18 @@ def UnencryptedCookieSessionFactoryConfig(
         popitem = manage_accessed(dict.popitem)
         __setitem__ = manage_accessed(dict.__setitem__)
         __delitem__ = manage_accessed(dict.__delitem__)
+
+        # flash API methods
+        @manage_accessed
+        def flash(self, msg, category=flash.INFO, queue_name=''):
+            storage = self.setdefault('_f_' + queue_name, {})
+            category = storage.setdefault(category, [])
+            category.append(msg)
+
+        @manage_accessed
+        def unflash(self, queue_name=''):
+            storage = self.pop('_f_' + queue_name, {})
+            return flash.FlashMessages(storage)
 
         # non-API methods
         def _set_cookie(self, response):
